change z-index for fixed menu

--- a/css/style.css
+++ b/css/style.css
@@ -156,10 +156,9 @@ main{
     display: flex;
 }
 .navbar-top-fixed{
-    width: 100%;
+    width:100%;
     height: 90px;
     background:rgba(0, 0,0, 0.5);
-    width: 100%;
     overflow: hidden;
     position: fixed;
     top: 0;
@@ -210,6 +209,7 @@ main{
     position: fixed;
     top: 0;
     bottom:90px;
+    z-index: 2;
     
 }
 .sidebar-column{
@@ -342,7 +342,7 @@ footer{
     width: 100%;
     bottom: 0;
     left: 0;
-    z-index: 1;
+    z-index: 3;
 }
 footer a{
     color: white;
